// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnitForm /> by default matches with snapshot 1`] = `
<form
  className="sc-AxmLO cHPFMi"
  onSubmit={[Function]}
>
  <div
    className="sc-AxjAm dxeZJh"
  >
    <div
      className="k-Grid sc-fzozJi hHEKhI"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-AxjAm fKOaOg"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor="donation-amount"
            onClick={[Function]}
          >
            Enter your amount
          </label>
        </div>
        <div
          className="sc-AxjAm dxQDWs"
        >
          <div
            className="sc-AxgMl jEfpQY"
          >
            <input
              autoComplete="off"
              className="sc-AxiKw RrCiq sc-AxheI bhagbG"
              defaultValue=""
              disabled={false}
              id="donation-amount"
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Your amount"
              type="number"
            />
            <span
              className="sc-Axmtr hboHRv"
              disabled={false}
            >
              €
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-fzozJi hHEKhI"
  >
    <button
      aria-label="To contribute"
      className="k-Button k-Button--helium k-Button--big sc-fzoLsD efnqBe"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      To contribute
    </button>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> with align prop matches with snapshot 1`] = `
<form
  className="sc-AxmLO cHPFMi"
  onSubmit={[Function]}
>
  <div
    className="sc-AxjAm dxeZJh"
  >
    <div
      className="k-Grid sc-fzozJi hHEKhI"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-AxjAm fKOaOg"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor=""
            onClick={[Function]}
          >
            
          </label>
        </div>
        <div
          className="sc-AxjAm dxQDWs"
        >
          <div
            className="sc-AxgMl jEfpQY"
          >
            <input
              autoComplete="off"
              className="sc-AxiKw RrCiq sc-AxheI bhagbG"
              defaultValue=""
              disabled={false}
              id=""
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="number"
            />
            <span
              className="sc-Axmtr hboHRv"
              disabled={false}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-fzozJi hHEKhI"
  >
    <button
      aria-label=""
      className="k-Button k-Button--helium k-Button--big sc-fzoLsD efnqBe"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      
    </button>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> with disabled prop matches with snapshot 1`] = `
<form
  className="sc-AxmLO cHPFMi"
  onSubmit={[Function]}
>
  <div
    className="sc-AxjAm dxeZJh"
  >
    <div
      className="k-Grid sc-fzozJi hHEKhI"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-AxjAm fKOaOg"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor=""
            onClick={[Function]}
          >
            
          </label>
        </div>
        <div
          className="sc-AxjAm dxQDWs"
        >
          <div
            className="sc-AxgMl jEfpQY"
          >
            <input
              autoComplete="off"
              className="sc-AxiKw RrCiq sc-AxheI bhagbG"
              defaultValue=""
              disabled={true}
              id=""
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="number"
            />
            <span
              className="sc-Axmtr dWfWTz"
              disabled={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-fzozJi hHEKhI"
  >
    <button
      aria-label=""
      className="k-Button k-Button--helium k-Button--big sc-fzoLsD efnqBe"
      disabled={true}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      
    </button>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> with error prop matches with snapshot 1`] = `
<form
  className="sc-AxmLO cHPFMi"
  onSubmit={[Function]}
>
  <div
    className="sc-AxjAm bpEnKz"
  >
    <div
      className="k-Grid sc-fzozJi hHEKhI"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-AxjAm fKOaOg"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor=""
            onClick={[Function]}
          >
            
          </label>
        </div>
        <div
          className="sc-AxjAm ihYyaQ"
        >
          <div
            className="sc-AxgMl jEfpQY"
          >
            <input
              autoComplete="off"
              className="sc-AxiKw gEySWP sc-AxheI bhagbG"
              defaultValue=""
              disabled={false}
              id=""
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="number"
            />
            <span
              className="sc-Axmtr ddBjug"
              disabled={false}
            />
          </div>
        </div>
        <div
          className="sc-AxjAm bsGvJV"
        >
          <span
            className="k-u-color-error k-u-size-micro k-u-weight-regular"
          >
            Error message…
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-fzozJi hHEKhI"
  >
    <button
      aria-label=""
      className="k-Button k-Button--helium k-Button--big sc-fzoLsD efnqBe"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      
    </button>
  </div>
</form>
`;
